Fixed alignment for blog and project containers

--- a/styles.css
+++ b/styles.css
@@ -159,8 +159,6 @@ a:visited {
     display: inline-block;
     height: auto;
     width: 100%;
-    margin: 0;
-    
 }
 
 .projects a {
@@ -178,8 +176,15 @@ a:visited {
     margin-left: 2.5%;
     margin-right: 2.5%;
     margin-bottom: 25px;
+    padding-bottom: 10px;
     border-radius: 5px;
     text-align: center;
+    vertical-align: top;
+}
+
+.top-project-container {
+    width: 100%;
+    margin-top: 5px;
 }
 
 .project-container img {
@@ -272,10 +277,11 @@ a:visited {
     display: inline-block;
     padding: 5px 4% 5px 4%;
     border-radius: 50%;
+    vertical-align: top;
 }
 
 .blog-container img{
-    max-width: 200px;  
+    max-width: 35%;  
     float: left;
     border-radius: 30%;
     margin-right: 10px;
